Fixing momentum scrolling on ios for project modal content

--- a/web/assets/scss/components/_project-modal.scss
+++ b/web/assets/scss/components/_project-modal.scss
@@ -60,7 +60,8 @@ $imageHeightSm: 200px;
     height: calc(100% - #{$imageHeightSm + $buttonHeightSm});
 
     .content-overflow {
-      overflow: auto;
+      overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
       &::after {
         left: 0;
         bottom: 0;
